ingress-resource.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: login
  rules:
  - http:
      paths:
      - path: /login(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: login
            port:
              number: 80
      - path: /homepage(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: homepage
            port:
              number: 80
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: login
            port:
              number: 80
